<resources>
    <string name="app_name">Clxns</string>
    <string name="title_home">Home</string>
    <string name="title_my_plan">My Plan</string>
    <string name="title_cases">Cases</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_txt_1">We will send you an <b>One Time Password</b> on this email address</string>
    <string name="enter_email">Enter Email Id</string>
    <string name="get_otp">Get OTP</string>
    <string name="zero">0</string>
    <string name="verify_proceed"><![CDATA[Verify & Proceed]]></string>
    <string name="enter_otp">Enter OTP Here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="error_password_not_match">New password and confirm password does not match</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="my_statistics">My Statistics</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This Month</string>
    <string name="cases_allocated">Cases Allocated</string>
    <string name="visit_pending">Visit Pending</string>
    <string name="follow_ups">Follow Ups</string>
    <string name="actions_pending">Actions Pending</string>
    <string name="amount_recovered">Amount Recovered</string>
    <string name="total_due">Total Due</string>
    <string name="total_pos">Total POS</string>
    <string name="notifications">Notifications</string>
    <string name="my_cases">My Cases</string>
    <string name="filter">Filter</string>
    <string name="search_hint_txt">Search by Loan Id/Name/Mobile/Pincode</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="select_bank">Select Bank</string>
    <string name="profile_subtitle">CLXNS Technologies Pvt. Ltd.</string>
    <string name="logout">Logout</string>
    <string-array name="status">
        <item>Select an option</item>
        <item>Closed</item>
        <item>Open</item>
        <item>Repossesion</item>
    </string-array>
    <string name="sub_status">Sub Status</string>
    <string name="from">From</string>
    <string name="start_date">Start Date</string>
    <string name="to">To</string>
    <string name="end_date">End Date</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="search_cases">Search Cases</string>
    <string name="refresh">Refresh</string>
    <string name="followup">Follow Up</string>
    <string name="check_in">Check In</string>
    <string name="checked_in">Checked In</string>
    <string name="create_route">Create Route</string>
    <string name="my_plans">My Plans</string>
    <string name="cases_summary">Cases Summary</string>
    <string name="internal_storage">Internal storage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_id">Customer Id</string>
    <string name="welcome_to_company">Welcome to company</string>
    <string name="backtoLogin">Back to login</string>
    <string name="enter_your_otp">Enter your 4 digit OTP below</string>
    <string name="TotalCases">Total Cases</string>
    <string name="OpenCases">Open Cases</string>
    <string name="ClosedCases">Closed cases</string>
    <string name="MyAccount">My Account</string>
    <string name="BankName">Bank Name</string>
    <string name="AmountDue">Amount Due</string>
    <string name="DueDate">Due Date</string>
    <string name="DatePassedDue">Date Passed Due</string>
    <string name="ProductType">Product Type</string>
    <string name="DisbursementDate">Disbursement Date</string>
    <string name="TotalAmount">Total Amount</string>
    <string name="Address">Address</string>
    <string name="Status">Status</string>
    <string name="Update">Update</string>
    <string name="CheckIn">Check In</string>
    <string name="Collect">Collect</string>
    <string name="Reposses">Reposses</string>
    <string name="searchview">searchview</string>
    <string name="search">search</string>
    <string name="Check_In">Check-IN</string>
    <string name="fourWheeler">4 wheeler</string>
    <string name="twowheeler">2 wheeler</string>
    <string name="other">other</string>
    <string name="Home">Home</string>
    <string name="Cases">Cases</string>
    <string name="MyPlan">My Plan</string>
    <string name="Account">Account</string>
    <string name="GotoMyCases">Go to My Cases</string>
    <string name="MyTodayPlan">My Today\'s Plan</string>
    <string name="cratePlan">Create Today\'s Plan</string>
    <string name="createPlanText">You do not have plan yet.\n create now</string>
    <string name="AddPlan">+ Plan</string>
    <string name="AddNewMobile">Add New Mobile</string>
    <string name="AddNewAddress">Add New Address</string>
    <string name="LoanAmount">Loan Amount</string>
    <string name="total_due_amount">Total Due Amount</string>
    <string name="EmiAmount">EMI Amount</string>
    <string name="DPDs">DPDs</string>
    <string name="principal_outstanding_amount">Principal Outstanding Amount</string>
    <string name="Product">Product</string>
    <string name="pin_code">Pincode</string>
    <string name="NewAddress">New Address</string>
    <string name="NewMobile">New Mobile</string>
    <string name="TypeNewAdd">Type new Address</string>
    <string name="LocationVerified">Location Check In</string>
    <string name="online">Online</string>
    <string name="cheque">Cheque</string>
    <string name="cash">Cash</string>
    <string name="upload_screenshots">Upload screenshots</string>
    <string name="myPlas">My Plans</string>
    <string name="MyPlans">My Plans</string>
    <string name="repossession">Repossession</string>
    <string name="go_to_drop_area">Go to Drop \nArea</string>
    <string name="keep_at_home">Keep at \nhome</string>
    <string name="submit_txt">Submit</string>
    <string name="DropOffSet">Drop-Off Asset</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="Track">Track</string>
    <string name="skip_tracing">Skip Tracing</string>
    <string name="ContacNo">Contact number</string>
    <string name="call">call</string>
    <string name="blood_group">Blood Group</string>
    <string name="Mobile">Mobile Number</string>
    <string name="Filterby">Filter By</string>
    <string name="cancel">Cancel</string>
    <string name="Apply">Apply</string>
    <string name="AssigningDate">Assigning Date</string>
    <string name="generate_receipt_txt">Generate Receipt</string>
    <string name="financial_institution">Financial institution</string>
    <string name="FollowUp">Follow Up</string>
    <string name="ChasisNumber">Chasis No.</string>
    <string name="RegistrationNo">Registration No.</string>
    <string name="AssetDesc">Asset Description</string>
    <string name="EngineNo">Engine No.</string>
    <string name="Remove">Remove</string>
    <string name="enter_new_mobile_number">Enter new mobile number</string>
    <string name="update_status">Update Status</string>
    <string name="edit_button">Edit Button</string>
    <string name="less_than_50"><![CDATA[50% <]]></string>
    <string name="greater_than_80"><![CDATA[80% >]]></string>
    <string name="interest_due_amount">Interest Due Amount</string>
    <string name="late_fee_penal_charges">Late Fee/Penal Charges</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an <b>One Time Password</b> on this email</string>
    <string name="profile_image">Profile Image</string>
    <string name="manager_contact_none">Manager Contact : None</string>
    <string name="reporting_manager_none">Reporting Manager : None</string>
    <string name="blood_group_none">Blood Group : None</string>
    <string name="employee_code_0">Employee Code : 0</string>
    <string name="please_wait">Please wait…</string>
    <string name="summary">Summary</string>
    <string name="ptp">Promise to Pay</string>
    <string name="rtp">RTP</string>
    <string name="broken_ptp">Broken PTP</string>
    <string name="dispute">Dispute</string>
    <string name="customer_not_found">Customer Not Found</string>
    <string name="call_back">Call Back</string>
    <string name="partially_collect">Partially Collected</string>
    <string name="settlement_foreclosure">Settlement/Foreclosure</string>
    <string name="customer_deceased">Customer Deceased</string>
    <string name="cases_toolbar_txt">Cases :&#160;</string>
    <string name="cases_collectable_txt">Collectable :&#160;</string>
    <string name="plan">+ Plan</string>
    <string name="un_plan">UnPlan</string>
    <string name="dash">-</string>
    <string name="loan_id">Loan ID</string>
    <string name="payment_status">Payment Status</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="history">History</string>
    <string name="contact_no">Contact No.</string>
    <string name="pan_card">PAN Card</string>
    <string name="dob">DOB</string>
    <string name="cibil_score">Cibil Score</string>
    <string name="business_name">Business Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="alternate_address">Alternate Address</string>
    <string name="alternate_mobile">Alternate Mobile</string>
    <string name="payment_collection">Payment Collection</string>
    <string name="map">Map</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="no_data">There\'s no data available currently.</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="password_with_space">Password should not contain spaces.</string>
    <string name="collected">Collected</string>
    <string name="due_amount">Due amount :&#160;</string>
    <string name="loan_type">Loan Type</string>
    <string name="arrow_forward">&#160;➜&#160;</string>
    <string name="additional_details">Additional Details</string>
    <string name="collectable_amount">Collectable Amount</string>
    <string-array name="amount_type">
        <item>Select an Option</item>
        <item>Total Due Amount</item>
        <item>Principal Outstanding Amount (POS)</item>
        <item>Settlement Amount (if different from POS)</item>
    </string-array>
    <string name="enter_amount">Enter amount</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="payment_recovery_date">Payment/Recovery Date</string>
    <string name="remarks">Remarks</string>
    <string name="probability">Probability</string>
    <string name="between_50_80">50% - 80%</string>
    <string name="reference_cheque_no">Reference/Cheque No.</string>
    <string name="revisit_date">Revisit Date</string>
    <string name="set_revisit_date">Set revisit date</string>
    <string name="revisit_time">Revisit Time</string>
    <string name="set_revisit_time">Set revisit time</string>
    <string name="type_here">Type here…</string>
    <string name="assign_to_tracer">Assign To Tracer</string>
    <string name="done">Done</string>
    <string name="alpha_numeric_chars">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
</resources>