<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    android:padding="@dimen/dp16">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/imgDash"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp8"
                android:layout_gravity="center"
                android:background="@drawable/bottom_sheet_dash"
                android:paddingHorizontal="@dimen/dp18" />

            <TextView
                android:id="@+id/statusActionActiveLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/probability"
                android:textColor="@color/text_black"
                android:textSize="@dimen/sp18"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/statusActionActiveRG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/green"
                    android:text="@string/greater_than_80"
                    android:textColor="@color/text_black" />

                <RadioButton
                    android:id="@+id/rb_50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/quantum_orange"
                    android:text="@string/between_50_80"
                    android:textColor="@color/text_black" />

                <RadioButton
                    android:id="@+id/rb_30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/light_red"
                    android:text="@string/less_than_50"
                    android:textColor="@color/text_black"
                    tools:ignore="TextContrastCheck" />
            </RadioGroup>


            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp12"
                android:text="@string/status"
                android:textAllCaps="false"
                android:textColor="@color/text_black"
                android:textSize="@dimen/sp18"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/statusSpinnerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp6"
                android:background="@drawable/background_spinner">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/dp4"
                    android:overlapAnchor="false"
                    android:paddingVertical="@dimen/dp10"
                    android:spinnerMode="dropdown"
                    android:theme="@style/spinnerTheme"
                    tools:ignore="SpeakableTextPresentCheck" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:background="@drawable/background_spinner"
                android:orientation="vertical"
                android:padding="@dimen/dp8">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp4"
                            android:text="@string/amount_type"
                            android:textAllCaps="false"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/sp12" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp4"
                            android:layout_marginEnd="@dimen/dp8"
                            android:background="@drawable/background_edittext_round">

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/spAmount"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp30"
                                android:padding="@dimen/dp4"
                                android:spinnerMode="dropdown"
                                android:theme="@style/spinnerTheme"
                                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/amount_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp10"
                            android:labelFor="@id/payment_amount_et"
                            android:text="@string/collectable_amount"
                            android:textAllCaps="false"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/sp12" />

                        <EditText
                            android:id="@+id/payment_amount_et"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp30"
                            android:layout_marginTop="@dimen/dp4"
                            android:layout_marginStart="@dimen/dp8"
                            android:background="@drawable/background_edittext_round"
                            android:hint="@string/enter_amount"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="9"
                            android:paddingStart="@dimen/dp8"
                            android:paddingTop="@dimen/dp4"
                            android:paddingEnd="@dimen/dp4"
                            android:paddingBottom="@dimen/dp4"
                            android:textSize="@dimen/sp12"
                            android:visibility="visible"
                            tools:ignore="DuplicateSpeakableTextCheck,LabelFor,TouchTargetSizeCheck" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtPaymentMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp4"
                    android:layout_marginTop="@dimen/dp12"
                    android:text="@string/payment_mode"
                    android:textAllCaps="false"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/sp12" />

                <RadioGroup
                    android:id="@+id/rgPayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbOnline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/online"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/sp12"
                        tools:ignore="TextContrastCheck" />

                    <RadioButton
                        android:id="@+id/rbCheque"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cheque"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/sp12"
                        tools:ignore="TextContrastCheck" />

                    <RadioButton
                        android:id="@+id/rbCash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cash"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/sp12"
                        tools:ignore="TextContrastCheck" />
                </RadioGroup>


                <LinearLayout
                    android:id="@+id/ll_payment_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp6"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtPaymentOrRecoveryDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp4"
                            android:text="@string/payment_recovery_date"
                            android:textAllCaps="false"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/sp12" />

                        <TextView
                            android:id="@+id/txtPaymentOrRecoveryDateValue"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp30"
                            android:layout_marginTop="@dimen/dp4"
                            android:layout_marginEnd="@dimen/dp8"
                            android:background="@drawable/background_edittext_round"
                            android:gravity="center_vertical"
                            android:hint="@string/select_date"
                            android:paddingStart="@dimen/dp8"
                            android:paddingTop="@dimen/dp4"
                            android:paddingEnd="@dimen/dp4"
                            android:paddingBottom="@dimen/dp4"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/sp12"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtReferenceNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp10"
                            android:text="@string/reference_cheque_no"
                            android:textAllCaps="false"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/sp12"
                            android:visibility="visible" />

                        <EditText
                            android:id="@+id/edtReferenceType"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp30"
                            android:layout_marginTop="@dimen/dp4"
                            android:layout_marginStart="@dimen/dp8"
                            android:background="@drawable/background_edittext_round"
                            android:digits="@string/alpha_numeric_chars"
                            android:hint="@string/type_here"
                            android:importantForAutofill="no"
                            android:inputType="textCapCharacters"
                            android:maxLength="25"
                            android:paddingStart="@dimen/dp8"
                            android:paddingTop="@dimen/dp4"
                            android:paddingEnd="@dimen/dp4"
                            android:paddingBottom="@dimen/dp4"
                            android:textSize="@dimen/sp12"
                            android:visibility="visible"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/revisitDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp12"
                android:text="@string/revisit_date"
                android:textColor="@color/text_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/revisitDateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:background="@drawable/background_edittext_round"
                android:hint="@string/set_revisit_date"
                android:paddingVertical="@dimen/dp14"
                android:paddingStart="@dimen/dp8"
                android:paddingEnd="@dimen/dp8"
                android:textColor="@color/text_black"
                android:textSize="@dimen/sp14"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/revisitTimeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp12"
                android:text="@string/revisit_time"
                android:textColor="@color/text_black"
                android:textSize="@dimen/sp18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/revisitTimeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:background="@drawable/background_edittext_round"
                android:hint="@string/set_revisit_time"
                android:paddingVertical="@dimen/sp14"
                android:paddingStart="@dimen/dp8"
                android:paddingEnd="@dimen/dp8"
                android:textColor="@color/text_black"
                android:textSize="@dimen/sp14"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/statusActionRemarkLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp12"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/remarks"
                android:textColor="@color/text_black"
                android:textSize="@dimen/sp18"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/statusActionRemarkET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:background="@drawable/background_edittext_round"
                android:gravity="top"
                android:hint="@string/type_here"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="5"
                android:paddingVertical="@dimen/dp8"
                android:paddingStart="@dimen/dp8"
                android:paddingEnd="@dimen/dp8"
                android:scrollbars="vertical"
                android:textColor="@color/text_black"
                android:textSize="@dimen/sp14"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/assignToTracerCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/assign_to_tracer"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/doneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/dp16"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/done"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>