<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp16"
    android:orientation="vertical">


    <TextView
        android:id="@+id/imgDash"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp8"
        android:layout_gravity="center"
        android:background="@drawable/bottom_sheet_dash"
        android:paddingHorizontal="20dp" />


    <TextView
        android:id="@+id/add_new_mobile_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gtwalsheimpromedium"
        android:text="@string/AddNewMobile"
        android:layout_marginTop="@dimen/dp16"
        android:visibility="gone"
        android:textColor="@color/text_black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtNewMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:background="@drawable/background_edittext_round"
        android:fontFamily="@font/gtwalsheimpromedium"
        android:hint="@string/enter_new_mobile_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="10"
        android:paddingVertical="15dp"
        android:paddingStart="@dimen/dp10"
        android:paddingEnd="2dp"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        android:visibility="gone"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/add_new_address_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorPrimary"
        android:fontFamily="@font/gtwalsheimpromedium"
        android:text="@string/AddNewAddress"
        android:layout_marginTop="@dimen/dp16"
        android:textColor="@color/text_black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtNewAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:background="@drawable/background_edittext_round"
        android:fontFamily="@font/gtwalsheimproregular"
        android:gravity="top"
        android:hint="@string/TypeNewAdd"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="8"
        android:paddingVertical="10dp"
        android:paddingStart="@dimen/dp10"
        android:paddingEnd="2dp"
        android:scrollbars="vertical"
        android:textColor="@color/text_black"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateDetailsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dip"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="@dimen/sp16"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/gtwalsheimpromedium"
        android:text="Update Details"
        android:textColor="@color/white" />


</LinearLayout>
